Add InfoSme delivery mode support